--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_URL=https://seu-backend.onrender.com
+VITE_API_URL=https://tile-system-backend.onrender.com
 
 # Substitua a URL acima pela URL real do seu backend no Render
 # Exemplo: VITE_API_URL=https://tile-system-backend.onrender.com
